initial setup in github

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
       <li><a href="/sprint-18/stories">Sprint 18</a></li>
     </ul>
 
-    <h2>Stories - heroku test </h2>
+    <h2>Stories</h2>
     <ul>
       <li><a href="/tce-650/index">Insert VTM (TCE-650)</a></li>
       <li><a href="/tce-863/index">Insert VMPP Combination Packs (TCE-863)</a></li>
