--- a/templates/base-large.html
+++ b/templates/base-large.html
@@ -106,5 +106,30 @@
     window.GOVUKFrontend.initAll();
   </script>
 </footer>
+<footer role="contentinfo">
+<div class="nhsuk-footer" id="nhsuk-footer">
+  <div class="nhsuk-width-container">
+    <h2 class="nhsuk-u-visually-hidden">Support links</h2>
+    <table class="nhsuk-footer__table">
+      <tr>
+        <td><a class="nhsuk-footer__list-item-link"
+               href="https://www.nhs.uk/Pages/nhs-sites.aspx">NHS sites</a></td>
+        <td><a class="nhsuk-footer__list-item-link"
+               href="https://www.nhs.uk/about-us">About us</a></td>
+        <td><a class="nhsuk-footer__list-item-link"
+               href="https://www.nhs.uk/contact-us/">Contact us</a></td>
+      </tr>
+      <tr>
+        <td><a class="nhsuk-footer__list-item-link"
+               href="https://www.nhs.uk/about-us/sitemap/">Sitemap</a></td>
+        <td><a class="nhsuk-footer__list-item-link"
+               href="https://www.nhs.uk/our-policies/">Our policies</a></td>
+        <td><a class="nhsuk-footer__list-item-link"
+               href="https://www.nhsbsa.nhs.uk/accessibility-statement-dictionary-medicines-and-devices-browser-dmd-browser">Accessibility</a></td>
+      </tr>
+    </table>
+  </div>
+</div>
+
 </body>
 </html>
