--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="/css/custom.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/nhsuk.min.css">
+  <link rel="stylesheet" href="/css/govuk-frontend-4.2.0.min.css">
+  <link rel="stylesheet" href="/css/govuk-frontend-ie8-4.2.0.min.css">
+  <link rel="stylesheet" href="/css/gov.min.scss">
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="/images/favicons/favicon.ico" type="image/x-icon">
@@ -31,6 +34,8 @@
   <script src="/js/copyDateToClipboard.js"></script>
   <script src="/js/copyToClipboard.js"></script>
   <script src="/js/pasteDateToDateInputs.js"></script>
+  <script src="/js/gov.min.js"></script>
+  <script src="/js/autocomplete.js"></script>
 
 </head>
 <body>
@@ -75,7 +80,9 @@
   </nav>
 </header>
 <nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
+  <ul>
   <li class="nhsuk-breadcrumb__item"><span class="nhsuk-breadcrumb__link"></span></li>
+  </ul>
 </nav>
 <div class="nhsuk-width-container">
   <main id="main-content" role="main" class="nhsuk-main-wrapper">
