--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       <li><a href="/tce-1105/index">Part IX Quick Price Max (TCE-1105)</a></li>
       <li><a href="/tce-1212/index">User Guide (TCE-1212)</a></li>
       <li><a href="/tce-1229/index">Update VMP Dictionary (Product Needs Actioning) (TCE-1229)</a></li>
-      <li><a href="/new-audit/landing-page">New audit prototype </a></li>
+      <li><a href="/new-audit/home-page">New audit prototype </a></li>
     </ul>
   </div>
 </div>
