--- a/templates/new-audit/tab-download-refined.html
+++ b/templates/new-audit/tab-download-refined.html
@@ -2058,47 +2058,11 @@
 
                 <div class="nhsuk-inset-text">
                     <span class="nhsuk-u-visually-hidden">Information: </span>
-                    <p>You can filter your results  <a href="refine-download-name.html" title="External website">by name and date </a>.</p>
+                    <p>You can download the full audit or filter   <a href="refine-download-date.html" title="External website">your results by date  </a>.</p>
                 </div>
                 <dl class="nhsuk-summary-list">
                     <div class="nhsuk-do-dont-list">
-                        <h3 class="nhsuk-do-dont-list__label">Refinements </h3>
-                    <div class="nhsuk-summary-list__row">
-                        <dt class="nhsuk-summary-list__key">
-                            Name
-                        </dt>
-                        <dd class="nhsuk-summary-list__value">
-                            ELLMO
-                        </dd>
-
-                        <dd class="nhsuk-summary-list__actions">
-
-                            <a href="edit-refine-name.html">
-                                Change<span class="nhsuk-u-visually-hidden"> name</span>
-                            </a>
-
-                        </dd>
-
-                    </div>
-
-<!--                    <div class="nhsuk-summary-list__row">-->
-<!--                        <dt class="nhsuk-summary-list__key">-->
-<!--                            Dictionary-->
-<!--                        </dt>-->
-<!--                        <dd class="nhsuk-summary-list__value">-->
-<!--                            Both PCDD and SCDD-->
-<!--                        </dd>-->
-
-<!--                        <dd class="nhsuk-summary-list__actions">-->
-
-<!--                            <a href="edit-refine-dictionary.html">-->
-<!--                                Change<span class="nhsuk-u-visually-hidden"> date of birth</span>-->
-<!--                            </a>-->
-
-<!--                        </dd>-->
-
-<!--                    </div>-->
-
+                        <h3 class="nhsuk-do-dont-list__label">Date refinements </h3>
                     <div class="nhsuk-summary-list__row">
                         <dt class="nhsuk-summary-list__key">
                            Start Date
@@ -2138,7 +2102,7 @@
                 </dl>
                 </div>
 
-                <a class="nhsuk-button nhsuk-u-margin-top-5" id="download-button"  href="#">Download audit </a>
+                <a class="nhsuk-button nhsuk-u-margin-top-5" id="download-button"  href="https://nhsbsauk-my.sharepoint.com/:x:/g/personal/jahmo_nhsbsa_nhs_uk/EetjR03KgCtEsFykB1FZI9sBBdgRCewYELITjkotzePlpQ?e=DnUjTx">Download audit </a>
             </div>
         </div>
 
