--- a/templates/new-audit/audit-summary-page.html
+++ b/templates/new-audit/audit-summary-page.html
@@ -109,7 +109,7 @@
             </thead>
             <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-                <td class="nhsuk-table__cell">10 March 2024</td>
+                <td class="nhsuk-table__cell">16 March 2024</td>
                 <td class="nhsuk-table__cell "><a href="edit-end-date.html">Edit</a></td>
             </tr>
             </tbody>
@@ -117,7 +117,7 @@
     </div>
 </fieldset>
 
-<a class="nhsuk-button nhsuk-u-margin-top-5" id="continue-button"  href="audit-summary-page.html">Download CSV</a>
+<a class="nhsuk-button nhsuk-u-margin-top-5" id="continue-button"  href="#">Download CSV</a>
 
 </div>
 
