setup base for adding trade families

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
       <li><a href="/tce-1212/index">User Guide (TCE-1212)</a></li>
       <li><a href="/tce-1229/index">Update VMP Dictionary (Product Needs Actioning) (TCE-1229)</a></li>
       <li><a href="/new-audit/home-page">New audit prototype </a></li>
+      <li><a href="/trade-families/">Trade families </a></li>
     </ul>
   </div>
 </div>
