--- a/templates/trade-families/add-amp.html
+++ b/templates/trade-families/add-amp.html
@@ -9,8 +9,10 @@
 {% block content %}
 
 <div class="nhsuk-grid-row">
-    <p></p>
-    <h1 class="nhsuk-heading-xl">1 Primary Wound Dressing spray (Phytoceuticals Ltd)</h1>
+    <div class="nhsuk-grid-column-full">
+        <br/>
+        <h1 class="nhsuk-heading-xl">1 Primary Wound Dressing spray (Phytoceuticals Ltd)</h1>
+    </div>
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
@@ -124,7 +126,7 @@
 
                     <h4 class="nhsuk-heading-m">Trade family</h4>
                     <p>This AMP is not part of a trade family.
-                        <a href="#">Add to a trade family.</a></p>
+                        <a href="link-amp-to-tf">Add to a trade family.</a></p>
                 </div>
 
                 <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="ampps">
@@ -138,7 +140,10 @@
                 <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="trade-family">
                     <h3 class="nhsuk-heading-l">Trade family</h3>
                     <p>This AMP is not part of a trade family.
-                        <a href="#">Add to a trade family.</a></p>
+                        <a href="link-amp-to-tf">Add to a trade family.</a></p>
+
+                    <p>This AMP is part of a trade family.
+                        <a href="view-tf">Trade family name.</a></p>
                 </div>
             </div>
         </div>
