added mapping journey from trade family group starting point

--- a/templates/trade-families/add-amp.html
+++ b/templates/trade-families/add-amp.html
@@ -1,9 +1,12 @@
 {% extends "trade-families/base.html" %}
 {% block breadcrumb %}
-
-<ol class="nhsuk-breadcrumb__list" xmlns="http://www.w3.org/1999/html">
-    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="#">AMP results</a></li>
-</ol>
+<nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
+    <div class="nhsuk-width-container">
+        <ol class="nhsuk-breadcrumb__list" xmlns="http://www.w3.org/1999/html">
+            <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="#">AMP results</a></li>
+        </ol>
+    </div>
+</nav>
 {% endblock %}
 
 {% block content %}
