--- a/templates/trade-families/index.html
+++ b/templates/trade-families/index.html
@@ -6,8 +6,8 @@
 
     <h2>Stories</h2>
     <ul>
-      <li><a href="add-amp">Add via AMP</a></li>
-      <li><a href="/tce-863/index">Insert VMPP Combination Packs (TCE-863)</a></li>
+      <li><a href="/trade-families/add-amp">Add via AMP</a></li>
+      <li><a href="/trade-families/tfg-table-view">Umbrella TFG view</a></li>
     </ul>
   </div>
 </div>
