--- a/templates/trade-families/create-new-tfg.html
+++ b/templates/trade-families/create-new-tfg.html
@@ -94,7 +94,7 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="add-other-tf-to-tfg" class="nhsuk-button">Create</a>
+        <a href="search-tfs-for-tfg" class="nhsuk-button">Create</a>
     </div>
 </div>
 {% endblock %}
