amendments to accommodate technical considerations

--- a/templates/trade-families/confirm-link-tf-tfg.html
+++ b/templates/trade-families/confirm-link-tf-tfg.html
@@ -21,14 +21,14 @@
 
             <div class="nhsuk-summary-list__row">
                 <dt class="nhsuk-summary-list__key">
-                    AMP
+                    Trade family group
                 </dt>
                 <dd class="nhsuk-summary-list__value">
-                    1 Primary Wound Dressing spray (Phytoceuticals Ltd)
+                    Primary Wound
                 </dd>
                 <dd class="nhsuk-summary-list__actions">
                     <a href="#">
-                        Change<span class="nhsuk-u-visually-hidden"> AMP</span>
+                        Change<span class="nhsuk-u-visually-hidden"> trade family group</span>
                     </a>
                 </dd>
             </div>
@@ -50,12 +50,12 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="add-amp#trade-family" class="nhsuk-button">Save</a>
+        <a href="tf-table-view" class="nhsuk-button">Save</a>
     </div>
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="add-amp">Cancel and go back to AMP</a>
+        <a href="view-tf">Cancel and go back to the trade family</a>
     </div>
 </div>
 
