--- a/templates/trade-families/search-tfs-for-tfg.html
+++ b/templates/trade-families/search-tfs-for-tfg.html
@@ -38,7 +38,7 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="tfg-table-view" class="nhsuk-button">Save</a>
+        <a href="tfg-confirm" class="nhsuk-button">Submit</a>
     </div>
 </div>
 {% endblock %}
