--- a/templates/trade-families/view-tfg.html
+++ b/templates/trade-families/view-tfg.html
@@ -59,6 +59,9 @@
         <th role="columnheader" class="" scope="col">
             Extractable
         </th>
+        <th role="columnheader" class="" scope="col">
+            Remove
+        </th>
     </tr>
     </thead>
     <tbody class="nhsuk-table__body">
@@ -66,16 +69,25 @@
         <td class="nhsuk-table__cell">1 Primary Wound</td>
         <td class="nhsuk-table__cell ">Valid</td>
         <td class="nhsuk-table__cell ">True</td>
+        <td class="nhsuk-table__cell">
+            <a href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
+        </td>
     </tr>
     <tr role="row" class="nhsuk-table__row">
         <td class="nhsuk-table__cell">Primary Wound (clotrimazole)</td>
         <td class="nhsuk-table__cell ">Valid</td>
         <td class="nhsuk-table__cell ">True</td>
+        <td class="nhsuk-table__cell">
+            <a href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
+        </td>
     </tr>
     <tr role="row" class="nhsuk-table__row">
         <td class="nhsuk-table__cell">Primary Wound (fluconazole)</td>
         <td class="nhsuk-table__cell ">Invalid</td>
         <td class="nhsuk-table__cell ">False</td>
+        <td class="nhsuk-table__cell">
+            <a href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
+        </td>
     </tr>
     </tbody>
 </table>
