--- a/templates/trade-families/add-amp.html
+++ b/templates/trade-families/add-amp.html
@@ -52,14 +52,14 @@
                     </li>
 
                     <li class="nhsuk-tabs__list-item">
-                        <a class="nhsuk-tabs__tab" href="#insert">
-                            Insert
+                        <a class="nhsuk-tabs__tab" href="#trade-family">
+                            Trade family
                         </a>
                     </li>
 
                     <li class="nhsuk-tabs__list-item">
-                        <a class="nhsuk-tabs__tab" href="#trade-family">
-                            Trade family
+                        <a class="nhsuk-tabs__tab" href="#insert">
+                            Insert
                         </a>
                     </li>
 
@@ -130,26 +130,57 @@
                     <h4 class="nhsuk-heading-m">Trade family</h4>
                     <p>This AMP is not part of a trade family.
                         <a href="link-amp-to-tf">Add to a trade family.</a></p>
+
+                    <p>This AMP is part of the trade family -
+                        <a href="view-tf" onclick="setTfJourney()">1 Primary Wound</a>.</p>
                 </div>
 
                 <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="ampps">
                     <h3 class="nhsuk-heading-l">View AMPPs</h3>
                 </div>
 
-                <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="insert">
-                    <h3 class="nhsuk-heading-l">Insert</h3>
-                </div>
-
                 <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="trade-family">
                     <h3 class="nhsuk-heading-l">Trade family</h3>
-                    <p>This AMP is not part of a trade family.
-                        <a href="link-amp-to-tf">Add to a trade family.</a></p>
+                    <table class="nhsuk-table">
+                        <caption class="nhsuk-table__caption">Trade family details</caption>
+                        <thead role="rowgroup" class="nhsuk-table__head">
+                        <tr role="row">
+                            <th role="columnheader" class="" scope="col">
+                                Name
+                            </th>
+                            <th role="columnheader" class=" nhsuk-table__header--numeric" scope="col">
+                                Start date
+                            </th>
+                            <th role="columnheader" class=" nhsuk-table__header--numeric" scope="col">
+                                End date
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody class="nhsuk-table__body">
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell"><a href="view-tf">1 Primary Wound</a></td>
+                            <td class="nhsuk-table__cell nhsuk-table__cell--numeric">01-01-2020</td>
+                            <td class="nhsuk-table__cell nhsuk-table__cell--numeric">01-02-3456</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
 
-                    <p>This AMP is part of a trade family.
-                        <a href="view-tf">Trade family name.</a></p>
+                <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="insert">
+                    <h3 class="nhsuk-heading-l">Insert</h3>
                 </div>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+
+<script>
+    function setTfJourney() {
+        localStorage.setItem("tf-journey", "amp");
+    }
+</script>
+
 {% endblock %}
