--- a/templates/trade-families/confirm-new-tf.html
+++ b/templates/trade-families/confirm-new-tf.html
@@ -17,8 +17,8 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
+        <h2 class="nhsuk-heading-m">AMP</h2>
         <dl class="nhsuk-summary-list">
-
             <div class="nhsuk-summary-list__row">
                 <dt class="nhsuk-summary-list__key">
                     AMP
@@ -32,16 +32,49 @@
                     </a>
                 </dd>
             </div>
+        </dl>
+    </div>
+</div>
+<div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-full">
+        <h2 class="nhsuk-heading-m">New trade family</h2>
+        <dl class="nhsuk-summary-list">
             <div class="nhsuk-summary-list__row">
                 <dt class="nhsuk-summary-list__key">
-                    Trade family
+                    Name
                 </dt>
                 <dd class="nhsuk-summary-list__value">
                     1 Primary Wound
                 </dd>
                 <dd class="nhsuk-summary-list__actions">
-                    <a href="link-amp-to-tf">
-                        Change<span class="nhsuk-u-visually-hidden"> trade family</span>
+                    <a href="create-new-tf">
+                        Change<span class="nhsuk-u-visually-hidden"> name</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="nhsuk-summary-list__row">
+                <dt class="nhsuk-summary-list__key">
+                    Start date
+                </dt>
+                <dd class="nhsuk-summary-list__value">
+                    01 January 2020
+                </dd>
+                <dd class="nhsuk-summary-list__actions">
+                    <a href="create-new-tf">
+                        Change<span class="nhsuk-u-visually-hidden"> start date</span>
+                    </a>
+                </dd>
+            </div>
+            <div class="nhsuk-summary-list__row">
+                <dt class="nhsuk-summary-list__key">
+                    End date
+                </dt>
+                <dd class="nhsuk-summary-list__value">
+                    01 February 3456
+                </dd>
+                <dd class="nhsuk-summary-list__actions">
+                    <a href="create-new-tf">
+                        Change<span class="nhsuk-u-visually-hidden"> end date</span>
                     </a>
                 </dd>
             </div>
