--- a/templates/trade-families/view-tf.html
+++ b/templates/trade-families/view-tf.html
@@ -1,5 +1,13 @@
 {% extends "trade-families/base.html" %}
 {% block content %}
+<div class="nhsuk-back-link">
+    <a class="nhsuk-back-link__link" href="#">
+        <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+             aria-hidden="true" height="24" width="24">
+            <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+        </svg>
+        Go back</a>
+</div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
         <br/>
@@ -39,7 +47,8 @@
     <div class="nhsuk-grid-column-full">
         <br/>
         <h2 class="nhsuk-heading-l">Trade family group</h2>
-        <p>This trade family does not belong to a trade family group.</p>
+        <p>This trade family does not belong to a trade family group.
+        <a href="link-tf-to-tfg">Link to trade family group.</a></p>
     </div>
 </div><br/>
 <div class="nhsuk-grid-row">
@@ -58,6 +67,15 @@
                 <th role="columnheader" class="" scope="col">
                     Extractable
                 </th>
+                <th role="columnheader" class="" scope="col">
+                    Start date
+                </th>
+                <th role="columnheader" class="" scope="col">
+                    End date
+                </th>
+                <th role="columnheader" class="" scope="col">
+                    Remove
+                </th>
             </tr>
             </thead>
             <tbody class="nhsuk-table__body">
@@ -65,19 +83,51 @@
                 <td class="nhsuk-table__cell">1 Primary Wound</td>
                 <td class="nhsuk-table__cell ">Valid</td>
                 <td class="nhsuk-table__cell ">True</td>
+                <td class="nhsuk-table__cell ">01/01/2020</td>
+                <td class="nhsuk-table__cell ">01/02/3456</td>
+                <td class="nhsuk-table__cell "><a href="#">Remove</a></td>
             </tr>
             <tr role="row" class="nhsuk-table__row">
                 <td class="nhsuk-table__cell">1 Primary Wound small</td>
                 <td class="nhsuk-table__cell ">Valid</td>
                 <td class="nhsuk-table__cell ">True</td>
+                <td class="nhsuk-table__cell ">15/11/2024</td>
+                <td class="nhsuk-table__cell ">05/06/2027</td>
+                <td class="nhsuk-table__cell "><a href="#">Remove</a></td>
             </tr>
             <tr role="row" class="nhsuk-table__row">
                 <td class="nhsuk-table__cell">1 Primary Wound medium</td>
                 <td class="nhsuk-table__cell ">Invalid</td>
                 <td class="nhsuk-table__cell ">False</td>
+                <td class="nhsuk-table__cell ">21/02/2005</td>
+                <td class="nhsuk-table__cell ">01/02/3456</td>
+                <td class="nhsuk-table__cell "><a href="#">Remove</a></td>
             </tr>
             </tbody>
         </table>
+    </div>
+</div>
+<div class="nhsuk-u-margin-top-2">
+    <div id="pagination">
+        <nav aria-label="Pagination Navigation">
+            <ul class="pagination">
+                <li class="pagination__item">Previous</li>
+                <li class="pagination__item">|</li>
+                <li class="pagination__item">
+                    <p class="pagination__link nhsuk-u-font-weight-bold" aria-current="true">1</p>
+                </li>
+                <li class="pagination__item">
+                    <a class="pagination__link" href="#">2</a>
+                </li>
+                <li class="pagination__item">|</li>
+                <li class="pagination__item"><a href="#">Next</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
+<div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-full">
+        <a class="nhsuk-button" href="search-amp">Link an AMP</a>
     </div>
 </div>
 {% endblock %}
