minor tweaks for clean up

--- a/templates/trade-families/add-amp.html
+++ b/templates/trade-families/add-amp.html
@@ -165,8 +165,9 @@
                         </tbody>
                     </table>
 
+                    <h3 class="nhsuk-heading-l">Trade family tree</h3>
                     <div class="tf-tree">
-                        <details class="nhsuk-details" id="tfg-expander">
+                        <details class="nhsuk-details" id="tfg-expander" open>
                             <summary class="nhsuk-details__summary">
                             <span class="nhsuk-details__summary-text">
                                 Primary Wound
@@ -176,7 +177,7 @@
                     </div>
 
                     <div class="tf-tree nhsuk-u-margin-left-4" style="display: none" id="tf1-div">
-                        <details class="nhsuk-details" id="tf1-expander">
+                        <details class="nhsuk-details" id="tf1-expander" open>
                             <summary class="nhsuk-details__summary">
                             <span class="nhsuk-details__summary-text">
                                 1 Primary Wound
@@ -186,16 +187,16 @@
                     </div>
 
                     <div class="tf-tree nhsuk-u-margin-left-7" style="display: none" id="tf1-amps-div">
-                        <details class="nhsuk-details">
+                        <details class="nhsuk-details" open>
                             <summary class="nhsuk-details__summary">
                             <span class="nhsuk-details__summary-text govuk-link--no-underline" style="color: black">
                                 AMPs
                             </span>
                             </summary>
                             <ul class="nhsuk-u-margin-top-3">
-                                <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound</a></li>
-                                <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound small</a></li>
-                                <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound medium</a></li>
+                                <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound Dressing spray (Phytoceuticals Ltd)</a></li>
+                                <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound small (Phytoceuticals Ltd)</a></li>
+                                <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound medium (Phytoceuticals Ltd)</a></li>
                             </ul>
                         </details>
                     </div>
@@ -218,8 +219,8 @@
                             </span>
                             </summary>
                             <ul class="nhsuk-u-margin-top-3">
-                                <li><a href="#" class="nhsuk-link--no-visited-state">Primary Wound clotrimazole</a></li>
-                                <li><a href="#" class="nhsuk-link--no-visited-state">Primary Wound clotrimazole small</a></li>
+                                <li><a href="#" class="nhsuk-link--no-visited-state">Primary Wound clotrimazole (Phytoceuticals Ltd)</a></li>
+                                <li><a href="#" class="nhsuk-link--no-visited-state">Primary Wound clotrimazole small (Phytoceuticals Ltd)</a></li>
                             </ul>
                         </details>
                     </div>
@@ -242,8 +243,8 @@
                             </span>
                             </summary>
                             <ul class="nhsuk-u-margin-top-3">
-                                <li><a href="#" class="nhsuk-link--no-visited-state">Primary Wound fluconazole</a></li>
-                                <li><a href="#" class="nhsuk-link--no-visited-state">Primary Wound fluconazole large</a></li>
+                                <li><a href="#" class="nhsuk-link--no-visited-state">Primary Wound fluconazole (Phytoceuticals Ltd)</a></li>
+                                <li><a href="#" class="nhsuk-link--no-visited-state">Primary Wound fluconazole large (Phytoceuticals Ltd)</a></li>
                             </ul>
                         </details>
                     </div>
