--- a/templates/trade-families/confirm-new-tf.html
+++ b/templates/trade-families/confirm-new-tf.html
@@ -17,26 +17,6 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <h2 class="nhsuk-heading-m">AMP</h2>
-        <dl class="nhsuk-summary-list">
-            <div class="nhsuk-summary-list__row">
-                <dt class="nhsuk-summary-list__key">
-                    AMP
-                </dt>
-                <dd class="nhsuk-summary-list__value">
-                    1 Primary Wound Dressing spray (Phytoceuticals Ltd)
-                </dd>
-                <dd class="nhsuk-summary-list__actions">
-                    <a href="#">
-                        Change<span class="nhsuk-u-visually-hidden"> AMP</span>
-                    </a>
-                </dd>
-            </div>
-        </dl>
-    </div>
-</div>
-<div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
         <h2 class="nhsuk-heading-m">New trade family</h2>
         <dl class="nhsuk-summary-list">
             <div class="nhsuk-summary-list__row">
@@ -83,12 +63,32 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="add-amp#trade-family" class="nhsuk-button">Save</a>
+        <h2 class="nhsuk-heading-m">AMPs</h2>
+        <dl class="nhsuk-summary-list">
+            <div class="nhsuk-summary-list__row">
+                <dt class="nhsuk-summary-list__key">
+                    AMP
+                </dt>
+                <dd class="nhsuk-summary-list__value">
+                    1 Primary Wound Dressing spray (Phytoceuticals Ltd)
+                </dd>
+                <dd class="nhsuk-summary-list__actions">
+                    <a href="#">
+                        Change<span class="nhsuk-u-visually-hidden"> AMP</span>
+                    </a>
+                </dd>
+            </div>
+        </dl>
     </div>
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="add-amp">Cancel and go back to AMP</a>
+        <a href="view-tf" class="nhsuk-button">Save</a>
+    </div>
+</div>
+<div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-full">
+        <a href="tf-table-view">Cancel</a>
     </div>
 </div>
 
