--- a/templates/trade-families/search-tfs-for-tfg.html
+++ b/templates/trade-families/search-tfs-for-tfg.html
@@ -19,7 +19,8 @@
     <div class="nhsuk-grid-column-full">
         <div class="nhsuk-form-group nhsuk-u-padding-right-5">
             <label for="tf-dropdown" class="nhsuk-label" id="tf-dropdownLabel">Add trade family</label>
-            <p class="nhsuk-hint">Hold down the Ctrl (Windows) or Command (Mac) button to select multiple options.</p>
+            <p class="nhsuk-hint" style="display: none">Hold down the Ctrl (Windows) or Command (Mac) button to select multiple options.</p>
+            <p class="nhsuk-hint">You can select multiple options.</p>
             <select id="tf-dropdown" class="nhsuk-select nhsuk-u-width-three-quarters" multiple="multiple"
                     aria-labelledby="tf-dropdownLabel">
                 <option value="">Select a trade family</option>
