--- a/templates/trade-families/add-extra-amps.html
+++ b/templates/trade-families/add-extra-amps.html
@@ -12,67 +12,7 @@
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
         <br/>
-        <h1 class="nhsuk-heading-xl">Save new trade family</h1>
-    </div>
-</div>
-<details class="nhsuk-details nhsuk-expander" open>
-    <summary class="nhsuk-details__summary">
-    <span class="nhsuk-details__summary-text">
-      Warnings
-    </span>
-    </summary>
-    <div class="nhsuk-details__text">
-        <p>The submitted data has the following warnings. Check the data is correct before saving.</p>
-        <ul>
-            <li>Warning one. </li>
-            <li>Warning two. </li>
-        </ul>
-    </div>
-</details>
-<div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
-        <h2 class="nhsuk-heading-m">Trade family details</h2>
-        <dl class="nhsuk-summary-list">
-            <div class="nhsuk-summary-list__row">
-                <dt class="nhsuk-summary-list__key">
-                    Name
-                </dt>
-                <dd class="nhsuk-summary-list__value">
-                    1 Primary Wound
-                </dd>
-                <dd class="nhsuk-summary-list__actions">
-                    <a href="create-new-tf">
-                        Change<span class="nhsuk-u-visually-hidden"> name</span>
-                    </a>
-                </dd>
-            </div>
-            <div class="nhsuk-summary-list__row">
-                <dt class="nhsuk-summary-list__key">
-                    Start date
-                </dt>
-                <dd class="nhsuk-summary-list__value">
-                    01 January 2020
-                </dd>
-                <dd class="nhsuk-summary-list__actions">
-                    <a href="create-new-tf">
-                        Change<span class="nhsuk-u-visually-hidden"> start date</span>
-                    </a>
-                </dd>
-            </div>
-            <div class="nhsuk-summary-list__row">
-                <dt class="nhsuk-summary-list__key">
-                    End date
-                </dt>
-                <dd class="nhsuk-summary-list__value">
-                    01 February 3456
-                </dd>
-                <dd class="nhsuk-summary-list__actions">
-                    <a href="create-new-tf">
-                        Change<span class="nhsuk-u-visually-hidden"> end date</span>
-                    </a>
-                </dd>
-            </div>
-        </dl>
+        <h1 class="nhsuk-heading-xl">Add selected AMPs</h1>
     </div>
 </div>
 <div class="nhsuk-grid-row nhsuk-u-margin-top-3">
@@ -150,7 +90,7 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="tf-table-view">Cancel</a>
+        <a href="view-tf">Cancel</a>
     </div>
 </div>
 {% endblock %}
