--- a/templates/trade-families/create-new-tf.html
+++ b/templates/trade-families/create-new-tf.html
@@ -103,7 +103,7 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="confirm-new-tf" class="nhsuk-button" id="create-link">Create</a>
+        <a href="confirm-new-tf" class="nhsuk-button" id="create-link" onclick="setAMPJourney()">Create</a>
     </div>
 </div>
 {% endblock %}
@@ -114,6 +114,12 @@
     var journey = localStorage.getItem("tf-journey");
     if (journey === "tf") {
         document.getElementById("create-link").href = "search-amp";
+    }
+</script>
+
+<script>
+    function setAMPJourney() {
+        localStorage.setItem("amp-journey", "new-amp");
     }
 </script>
 
